# Yorumiya-Commentary

./: README.md  pyproject.toml
doc/: docs_structure.md
doc/00_overview/: 00_project_overview.md  01_project_goal.md  02_concepts.md  03_design_principles.md
doc/01_requirements/: 00_requirements.md  01_mvp.md  02_non_goals.md  03_future_features.md
docs/00_overview/: 00_project_overview.md  01_goals.md  01_project_goal.md  02_concepts.md  02_core_concept.md  03_design_principles.md  04_roadmap.md  05_milestone_status.md  06_post_mvp_improvement_roadmap.md
docs/01_requirements/: 00_mvp_scope.md  01_functional_requirements.md  02_non_functional_requirements.md  03_out_of_scope.md  04_acceptance_criteria.md
docs/02_architecture/: 00_pipeline.md  01_modules.md  02_data_flow.md  03_realtime_pipeline.md  04_state_management.md
docs/03_ai/: 00_personality.md  01_prompt_design.md  02_good_examples.md  03_bad_examples.md  04_memory_design.md  05_conversation_rules.md
docs/04_video/: 00_video_input.md  01_frame_sampling.md  02_scene_analysis.md  03_event_detection.md  04_vision_models.md  05_review_overlay_export.md
docs/05_audio/: 00_audio_input.md  01_whisper.md  02_vad.md  03_audio_analysis.md  04_emotion_detection.md
docs/06_voice/: 00_voicevox.md  01_speech_timing.md  02_voice_styles.md  03_interrupt_control.md
docs/07_runtime/: 00_scheduler.md  01_queue_system.md  02_logging.md  03_config_system.md  04_error_handling.md  05_local_mvp_runtime.md
scripts/: export_review_overlay.py
tests/: test_core_pipeline.py  test_milestone_smoke.py
(+16 files in other folders)
