[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "yorumiya-commentary"
version = "0.1.0"
description = "Modular realtime companion commentary pipeline."
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
video = ["opencv-python-headless>=4.8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
